--- a/Leknes.xcodeproj/xcshareddata/xcschemes/Leknes.xcscheme
+++ b/Leknes.xcodeproj/xcshareddata/xcschemes/Leknes.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E173453B2445E3DA007CD373"
-               BuildableName = "Leknes.app"
+               BuildableName = "Notes.app"
                BlueprintName = "Leknes"
                ReferencedContainer = "container:Leknes.xcodeproj">
             </BuildableReference>
@@ -31,7 +31,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E173453B2445E3DA007CD373"
-            BuildableName = "Leknes.app"
+            BuildableName = "Notes.app"
             BlueprintName = "Leknes"
             ReferencedContainer = "container:Leknes.xcodeproj">
          </BuildableReference>
@@ -81,7 +81,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E173453B2445E3DA007CD373"
-            BuildableName = "Leknes.app"
+            BuildableName = "Notes.app"
             BlueprintName = "Leknes"
             ReferencedContainer = "container:Leknes.xcodeproj">
          </BuildableReference>
@@ -98,7 +98,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E173453B2445E3DA007CD373"
-            BuildableName = "Leknes.app"
+            BuildableName = "Notes.app"
             BlueprintName = "Leknes"
             ReferencedContainer = "container:Leknes.xcodeproj">
          </BuildableReference>
